--- a/public/lang/lang_zh-TC.json
+++ b/public/lang/lang_zh-TC.json
@@ -1,4 +1,36 @@
 {
 	"By stakeholders, for stakeholders." : "由利益攸關者為利益攸關者執行。",
-	"We bring DAOs and Stakeholders together." : "我們把DAOs和利益攸關方聚集在一起。"
+	"We bring DAOs and Stakeholders together." : "我們把DAOs和利益攸關方聚集在一起。",
+	
+	
+	"Create" : "創建",
+	"Space Information" : "空間資訊",
+	"Name" : "名稱",
+	"Name your Space" : "給您的空間取個名字",
+	"Type" : "類型",
+	"Please select" : "請選擇",
+	"Network" : "網絡",
+	"Email" : "電子郵件",
+	"Enter your email" : "輸入郵寄地址",
+	"Create your own organization in a few minutes!" : "只需幾分鐘就可以創建您自己的組織!",
+	"email address is not valid" : "無效的郵寄地址",
+	"Settings" : "設定",
+	"Joined" : "已加入",
+	"Join" : "加入",
+	"leave" : "離開",
+	"My profile" : "個人資訊",
+	"Disconnect" : "斷開錢包",
+	"Select a network" : "選擇網絡",
+	"Connect Wallet" : "連接錢包",
+	"Edit cover" : "編輯封面",
+	"About" : "關於",
+	"Help Center" : "幫助",
+	"Language/Currency" : "語言/貨幣",
+	"Dark theme" : "深色模式",
+	"Docs" : "檔案",
+	"Request Features" : "功能建議",
+	"Search" : "蒐索",
+	"Language" : "語言",
+	"Currency" : "貨幣",
+	"Create your Space" : "創建您的空間"
 }
