--- a/public/lang/lang_zh-CN.json
+++ b/public/lang/lang_zh-CN.json
@@ -1,6 +1,12 @@
 {
 	"By stakeholders, for stakeholders." : "由利益攸关者为利益攸关者执行。",
 	"We bring DAOs and Stakeholders together." : "我们把DAOs和利益攸关方聚集在一起。",
+	"You can set preferred display name, create" : "你可以设置优先显示的昵称 , 创建",
+	"your profile URL" : "你的个人URL",
+	"and manage other personal settings." : "并管理其他的个人设置",
+	"We recommend an image of at least 400x400." : "我们建议上传的图片不小于400x400",
+	"To update your settings you should sign message through your wallet. Click 'Update profile' then sign the message" : "要更新您的设置，您应该通过钱包在信息上签名。单击“更新设置”，然后在消息上签名",
+	"Gifs work too \uD83D\uDE4C" : "也可以上传Gif哦 \uD83D\uDE4C",
 	
 	"Create" : "创建",
 	"Space Information" : "空间信息",
@@ -33,5 +39,23 @@
 	"Language" : "语言",
 	"Currency" : "货币",
 	"Owner" : "创建者",
+	"Social Profiles" : "社媒账户",
+	"General" : "通用设置",
+	"Social" : "社交媒体",
+	"Upload" : "上 传",
+	"The current deployed network" : "当前部署的以太坊网络",
+	"Bio" : "简介",
+	"Save Changes" : "保存更改",
+	"Add more social account" : "添加更多社媒账户",
+	"Update Social Profiles" : "更新社媒信息",
+	"Space Settings" : "空间设置",
+	"Joined Spaces" : "加入的空间",
+	"Net Worth" : "总资产",
+	"Edit profile" : "编辑个人信息",
+	"Display name" : "昵称",
+	"Portfolio or website" : "文件夹或网址",
+	"Profile photo" : "头像",
+	"Account info" : "账户信息",
+	"Update Profile" : "更新信息",
 	"Create your Space" : "创建您的空间"
 }
