--- a/public/lang/lang_zh-CN.json
+++ b/public/lang/lang_zh-CN.json
@@ -57,5 +57,14 @@
 	"Profile photo" : "头像",
 	"Account info" : "账户信息",
 	"Update Profile" : "更新信息",
+	"Enter your display name" : "输入你的昵称",
+	"About yourself in a few words" : "简短的几个词来介绍你",
+	"Enter URL" : "输入URL",
+	"please input" : "请输入",
+	"Please enter" : "请输入",
+	"Tell about your Space in a few words" : "简短地介绍你的空间",
+	"OverView" : "总览",
+	"Articles" : "文章",
+	"New" : "新建",
 	"Create your Space" : "创建您的空间"
 }
