--- a/public/lang/lang_zh-TC.json
+++ b/public/lang/lang_zh-TC.json
@@ -10,6 +10,7 @@
 	
 	
 	"Create" : "創建",
+	"Creating..." : "创建中...",
 	"Space Information" : "空間資訊",
 	"Name" : "名稱",
 	"Name your Space" : "給您的空間取個名字",
