--- a/packages/overseas-payment-cashier/public/lang/pt-br.json
+++ b/packages/overseas-payment-cashier/public/lang/pt-br.json
@@ -1,6 +1,6 @@
 {
 	"复制成功" : "A copia foi bem sucedida",
-	"交易剩余时间" : "A copia foi bem sucedida",
+	"交易剩余时间" : "Expira em",
 	"订单号" : "Order ID",
 	"复制Pix代码" : " PIX Cópia é Cola",
 	"请打开您的支付应用程序并扫描下方二维码进行支付或复制下方的 Pix 码并粘贴到您的支付应用程序中以完成购买。" : "Por favor abra o seu aplicativo de pagamento  e escaneie o código QR abaixo para pagar ou copie o código Pix abaixo e cole em seu app de pagamenm para f inalizar a compra.",
